--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
             </div>
           </span>
           <span class="dropdown2">
-            <button input type="button" name="sendcv1" class="btn__sendcv" id="btnsend">Отправить резюме</button>
+            <button input type="button" name="sendcv1" class="btn__sendcv" id="btnsendcvmenu">Отправить резюме</button>
             <div id="dropdownsendcv1" class="dropdown__content2">
               <form class="sendcv1" id="sendcv01" action="index.html" method="post">
                 <li><input id="username2" type="text" name="username2" placeholder="ФИО"></li>
 
                 <li><input id="phonenumb2" type="tel" name="phonenumb1" placeholder="Телефон"></li>
-                <select class="profession dropdownselect" id="profession01" placeholder="Должность">
+                <select class="profession dropdownselect" id="profession01">
                     <option class="profession1" type="radio" name="profession" value="Репетитор" placeholder="Должность">
                       <label for="profession1">Репетитор</label>
                     </option>
