--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
           </span>
         </span>
       </div>
+      <div class="mainmenu">
+        <span>Главная</span>
+        <span>Подобрать Персонал</span>
+        <span>Цены</span>
+        <span id="vashdomlogo"><img src="assets/images/vashdomlogo.png"></span>
+        <span>Оставить заявку</span>
+        <span>Оставить вакансию</span>
+        <span>Контакты</span>
+      </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
   <script src="assets/jquery.js"></script>
