headings with pictures

--- a/index.html
+++ b/index.html
@@ -122,9 +122,62 @@
           <li class="menuitem"><a href="#" id="lastitemmenu" class="menuitemtext1">Контакты</a></li>
         </ul>
       </nav>
+      <div id="block-for-slider">
+        <div id="viewport">
+            <ul id="slidewrapper">
+                <li class="slide"><img src="assets/images/1.png" alt="1" class="slide-img"></li>
+                <li class="slide"><img src="assets/images/2.png" alt="2" class="slide-img"></li>
+                <li class="slide"><img src="assets/images/3.png" alt="3" class="slide-img"></li>
+                <li class="slide"><img src="assets/images/4.png" alt="4" class="slide-img"></li>
+                <li class="slide"><img src="assets/images/5.png" alt="4" class="slide-img"></li>
+                <li class="slide"><img src="assets/images/6.png" alt="4" class="slide-img"></li>
+            </ul>
+            <div id="prev-next-btns">
+                <div id="prev-btn"></div>
+                <div id="next-btn"></div>
+            </div>
+        </div>
+        <div>
+          <ul id="nav-btns">
+              <li class="slide-nav-btn"></li>
+              <li class="slide-nav-btn"></li>
+              <li class="slide-nav-btn"></li>
+              <li class="slide-nav-btn"></li>
+              <li class="slide-nav-btn"></li>
+              <li class="slide-nav-btn"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="pagetitles">
+        <span class="permanentbox">
+          <p>
+            <img src="assets/images/house.png" alt="Домик" class="houseimage">
+            <img src="assets/images/key.png" alt="Ключ" class="keyimage">
+            <h2>Постоянный <br> персонал</h2>
+              <p class="permanentboxtext">
+                Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не
+                дань моде и не причуды избалованных нежданно свалившимя богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени.
+              </p>
+          </p>
+          <button type="button" href="#" name="more1" class="morebutton">Подробнее</button>
+        </span>
+        <span class="temporarybox">
+          <p>
+            <img src="assets/images/clock.png" alt="Часы" class="clockimage">
+            <img src="assets/images/clockshadow.png" alt="Тень" class="clockshadow">
+            <h2>Временный <br> персонал</h2>
+              <p class="temporaryboxtext">
+                Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не
+                дань моде и не причуды избалованных нежданно свалившимя богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени.
+              </p>
+          </p>
+          <button type="button" href="#" name="more1" class="morebutton">Подробнее</button>
+        </span>
+      </div>
+      <img src="assets/images/decor.png" alt="Орнамент" class="decorimage">
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
   <script src="assets/jquery.js"></script>
-  <script src="assets/script.js"></script>
+  <script type="text/javascript" src="assets/script.js"></script>
   </body>
 </html>
