main and footer

--- a/index.html
+++ b/index.html
@@ -175,7 +175,57 @@
         </span>
       </div>
       <img src="assets/images/decor.png" alt="Орнамент" class="decorimage">
+      <div class="imagesblock">
+        <img src="assets/images/ph1.png" alt="">
+        <img src="assets/images/ph2.png" alt="">
+        <img src="assets/images/ph3.png" alt="">
+        <img src="assets/images/ph4.png" alt="">
+      </div>
+      <div class="maintext">
+        <h1>Заголовок</h1>
+        <p>Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не дань моде и не причуды избалованных нежданно свалившимя богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени.Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не дань моде и не причуды избалованных нежданно свалившимя богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени.
+        </p>
+        <p>Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не дань моде и не причуды избалованных нежданно свалившимя богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени. Люди, для которых важно не только вырастить ребенка, но и создать основу будущего благосостояния, построив свою карьеру - вот основная категория заказчиков, которые ежедневно пользуются услугами нашей компании по подбору домашнего персонала. Заказ няни, сиделки или домработницы является благом не только для женщины, которая имеет возможность строить свою карьеру или получить, наконец, передышку от выполнения бесконечных домашних обязанностей, но и для всех остальных членов семьи, которые могут провести вместе свободный вечер или выходные. А доступные цены, которые устанавливает на свои услуги наша компания, и предлагаемый нами широкий выбор различных категорий домашнего персонала делают исключительно удобными и, главное, безопасными процесс поиска няни для малыша, сиделки для пожилых членов семьи или домработницыдля квартиры или загородного особняка.
+        </p>
+        <p>
+        Наличие в доме обслуживающего персонала - водителя, няни, гувернантки, горничной, домработницы - это вовсе не дань моде и не причуды избалованных нежданно свалившимя богатством нуворишей. Напротив, услугами сиделки или няни пользуются сегодня те, кто отлично знает цену деньгам и своему времени. Люди, для которых важно не только вырастить ребенка, но и создать основу.
+        </p>
+      </div>
     </div>
+    <div class="bottommenu">
+      <span>
+        <a href="#">ГЛАВНАЯ</a>
+      </span>
+      <span>|</span>
+      <span>
+        <a href="#">ПОДОБРАТЬ ПЕРСОНАЛ</a>
+      </span>
+      <span>|</span>
+      <span>
+        <a href="#">ЦЕНЫ</a>
+      </span>
+      <span>|</span>
+      <span>
+        <a href="#">ГЛАВНАЯ</a>
+      </span>
+      <span>|</span>
+      <span>
+        <a href="#">ПОДОБРАТЬ ПЕРСОНАЛ</a>
+      </span>
+      <span>|</span>
+      <span>
+        <a href="#">ЦЕНЫ</a>
+      </span>
+    </div>
+    <footer>
+      <span class="phonenumber2">
+        8 (4872) 91-13-45
+      </span>
+      <span class="signature">
+        Разработка и продвижение сайта компанией "Юни Веб" -
+        <span><img class="developerlogo" src="assets/images/logoUW.png"></span>
+      </span>
+    </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
   <script src="assets/jquery.js"></script>
   <script type="text/javascript" src="assets/script.js"></script>
